# tsisa_lab01

./: .gitignore  CMakeLists.txt  README.md  output.txt
include/: dichotomySearcher.hpp  passiveSearcher.hpp  searcher.hpp
sources/: dichotomySearcher.cpp  main.cpp  passiveSearcher.cpp  searcher.cpp
